tests/conformance/fail/borrow/immut_assign_while_borrowed.ny
fn main() {
    let v = 1
    let r = &v
    v = 2
    let _ = r
}
